Add: Added the implementation of the recommendation